@@ -1,3 +1,7 @@
+2011-02-13  Steffen Gebert  <steffen.gebert@typo3.org>
+
+	* Added Test #17495: Add Unit Tests for t3lib_div::resolveBackPath()
+
 2011-02-11  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed issue #17552: htmlArea RTE: Delete deprecated class HTMLArea.Dialog
